@@ -14,9 +14,7 @@ DESIGN
 - when beaker is emptied, try setting values in graph indicators to '0' and position them below 10^-16 (or position at '0' on linear)
 
 HIGH
-- move 'Water' label above pipe on faucet
 - Basics: make 'milk' the initial solute
-- Basics: remove pointer on pH meter when inactive
 - use same color for battery acid and drain cleaner
 - milk: try vary pale gray or direct to faint blue
 - when something is diluted enough to be ph=7, it should be water color (really?)
