@@ -1,3 +1,4 @@
+11/25/13 Basics: hide pointer on pH meter when it's not displaying a value
 11/25/13 Basics: move water faucet down a bit
 11/25/13 move 'Water' label on faucet
 11/25/13 remove 'decoration' option from scenery-phet.FaucetNode
